force-app/main/default/objects/SBQQ__Quote__c/fields/ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatus__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ApprovalStatus</valueSetName>
    </valueSet>
</CustomField>