force-app/main/default/objects/SBQQ__Quote__c/fields/DiscountMetric__c.field-meta.xml
<CustomField>
    <fullName>DiscountMetric__c</fullName>
    <description>Metric used to trigger Discount approvals.</description>
    <label>Discount Metric</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DiscountMetric</valueSetName>
    </valueSet>
</CustomField>