force-app/main/default/objects/SBQQ__Quote__c/fields/EditLinesFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>EditLinesFieldSetName__c</fullName>
    <label>Quote Line View</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Margin</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>