force-app/main/default/objects/SBQQ__Quote__c/fields/MarginPercent__c.field-meta.xml
<CustomField>
    <fullName>MarginPercent__c</fullName>
    <formula>IF(SBQQ__NetAmount__c = 0, 1, 1 - BLANKVALUE(TotalCost__c,0) / SBQQ__NetAmount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>