force-app/main/default/objects/SBQQ__Quote__c/fields/StatusApproval__c.field-meta.xml
<CustomField>
    <fullName>StatusApproval__c</fullName>
    <formula>CASE(  ApprovalStatus__c  ,
    &quot;Draft&quot;, IMAGE(&quot;https://i.ibb.co/vqQsJv5/btn-draft.png&quot;,&quot;Draft&quot;,20,60),
    &quot;In Review&quot;, IMAGE(&quot;https://i.ibb.co/vqQsJv5/btn-draft.png&quot;,&quot;In Review&quot;,20,60),
    &quot;Approved&quot;, IMAGE(&quot;https://i.ibb.co/FYbdpn8/btn-approved.png&quot;, &quot;Approved&quot;,20,60),
    &quot;Denied&quot;, IMAGE(&quot;https://i.ibb.co/0YgW4t4/btn-denied.png&quot;, &quot;Denied&quot;,20,60),
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status (Approval)</label>
    <type>Text</type>
</CustomField>