force-app/main/default/objects/SBQQ__Quote__c/fields/StatusProposal__c.field-meta.xml
<CustomField>
    <fullName>StatusProposal__c</fullName>
    <formula>CASE(  SBQQ__Status__c  ,
    &quot;Draft&quot;, IMAGE(&quot;https://i.ibb.co/vqQsJv5/btn-draft.png&quot;,&quot;Draft&quot;,20,60),
    &quot;Presented&quot;, IMAGE(&quot;https://i.ibb.co/hcb6Fzk/btn-presented.png&quot;, &quot;Presented&quot;,20,60),
    &quot;Accepted&quot;, IMAGE(&quot;https://i.ibb.co/N1Qh233/btn-accepted.png&quot;, &quot;Accepted&quot;,20,60),
    &quot;Rejected&quot;, IMAGE(&quot;https://i.ibb.co/Jmcrh77/btn-rejected.png&quot;, &quot;Rejected&quot;,20,60),
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status (Proposal)</label>
    <type>Text</type>
</CustomField>