force-app/main/default/objects/SBQQ__Quote__c/fields/TotalCost__c.field-meta.xml
<CustomField>
    <fullName>TotalCost__c</fullName>
    <label>Total Cost</label>
    <summarizedField>SBQQ__QuoteLine__c.TotalCost__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>